Fixed content-wrapper max width bug on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -17,7 +17,7 @@
   background-color: transparent;
 
   > .content-wrapper {
-    max-width: 1200px;
+    max-width: 100%;
   }
 
   input[type="text"], textarea {
